--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,11 @@ description: A web app that uses AngularDart
 version: 0.0.1
 
 environment:
-  sdk: '>=2.2.0 <3.0.0'
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   angular: ^6.0.0-alpha
+  angular_forms: ^2.1.0
 
 dev_dependencies:
   angular_test: ^2.3.1
@@ -14,3 +15,4 @@ dev_dependencies:
   build_test: ^0.10.8
   build_web_compilers: ^2.1.0
   test: ^1.6.4
+  sass_builder: ^2.1.2
