--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   angular_router: ^2.0.0-alpha
   http: ^0.12.0
   stream_transform: ^0.0.19
+  dnd: ^1.4.3
 
 dev_dependencies:
   angular_test: ^2.3.1
