--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: A web app that uses AngularDart
 version: 0.0.1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: "2.2.0"
 
 dependencies:
-  angular: ^6.0.0-alpha
+  angular: ^5.2.0
   angular_forms: ^2.1.0
   angular_router: ^2.0.0-alpha
   http: ^0.12.0
@@ -14,9 +14,9 @@ dependencies:
   dnd: ^1.4.3
 
 dev_dependencies:
-  angular_test: ^2.3.1
-  build_runner: ^1.5.1
-  build_test: ^0.10.8
-  build_web_compilers: ^2.1.0
-  test: ^1.6.4
-  sass_builder: ^2.1.2
+  angular_test: ^2.2.0
+  build_runner: ^1.1.2
+  build_test: ^0.10.3
+  build_web_compilers: ^1.0.0
+  test: ^1.5.1
+  sass_builder: ^2.0.0
